--- a/feature_encoding_exp/test.ipynb
+++ b/feature_encoding_exp/test.ipynb
@@ -26,7 +26,7 @@
     "from base_models.mlp import MLP\n",
     "from base_models.tabTransformer import TabTransformer\n",
     "from base_models.modernNCA import ModernNCA\n",
-    "from encoders.numEncoders import FourierFeatures\n",
+    "from encoders.numEncoders import FourierFeatures, BinningFeatures\n",
     "\n",
     "MODELS = {\n",
     "    'MLP': MLP,\n",
@@ -34,7 +34,8 @@
     "    'ModernNCA': ModernNCA\n",
     "}\n",
     "ENCODERS = {\n",
-    "    'FourierFeatures': FourierFeatures\n",
+    "    'FourierFeatures': FourierFeatures,\n",
+    "    'BinningFeatures': BinningFeatures,\n",
     "}\n",
     "\n",
     "\n",
@@ -59,154 +60,160 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iteration [0/611] | Loss: 0.5349\n",
-      "Iteration [50/611] | Loss: 0.2847\n",
-      "Iteration [100/611] | Loss: 0.2473\n",
-      "Iteration [150/611] | Loss: 0.4159\n",
-      "Iteration [200/611] | Loss: 0.4194\n",
-      "Iteration [250/611] | Loss: 0.2066\n",
-      "Iteration [300/611] | Loss: 0.2435\n",
-      "Iteration [350/611] | Loss: 0.2743\n",
-      "Iteration [400/611] | Loss: 0.3481\n",
-      "Iteration [450/611] | Loss: 0.1847\n",
-      "Iteration [500/611] | Loss: 0.2861\n",
-      "Iteration [550/611] | Loss: 0.2399\n",
-      "Iteration [600/611] | Loss: 0.2253\n",
-      "Epoch [1/10] | Loss: 0.3156 | Accuracy: 0.8550 | Time: 7.87s\n",
-      "Iteration [0/611] | Loss: 0.2487\n",
-      "Iteration [50/611] | Loss: 0.4153\n",
-      "Iteration [100/611] | Loss: 0.4307\n",
-      "Iteration [150/611] | Loss: 0.2277\n",
-      "Iteration [200/611] | Loss: 0.2761\n",
-      "Iteration [250/611] | Loss: 0.3136\n",
-      "Iteration [300/611] | Loss: 0.2167\n",
-      "Iteration [350/611] | Loss: 0.2720\n",
-      "Iteration [400/611] | Loss: 0.2885\n",
-      "Iteration [450/611] | Loss: 0.2219\n",
-      "Iteration [500/611] | Loss: 0.4573\n",
-      "Iteration [550/611] | Loss: 0.2378\n",
-      "Iteration [600/611] | Loss: 0.2590\n",
-      "Epoch [2/10] | Loss: 0.2896 | Accuracy: 0.8647 | Time: 6.88s\n",
-      "Iteration [0/611] | Loss: 0.3029\n",
-      "Iteration [50/611] | Loss: 0.2775\n",
-      "Iteration [100/611] | Loss: 0.3507\n",
-      "Iteration [150/611] | Loss: 0.2001\n",
-      "Iteration [200/611] | Loss: 0.2040\n",
-      "Iteration [250/611] | Loss: 0.3015\n",
-      "Iteration [300/611] | Loss: 0.3109\n",
-      "Iteration [350/611] | Loss: 0.2871\n",
-      "Iteration [400/611] | Loss: 0.2445\n",
-      "Iteration [450/611] | Loss: 0.2716\n",
-      "Iteration [500/611] | Loss: 0.2550\n",
-      "Iteration [550/611] | Loss: 0.3178\n",
-      "Iteration [600/611] | Loss: 0.3196\n",
-      "Epoch [3/10] | Loss: 0.2851 | Accuracy: 0.8669 | Time: 7.10s\n",
-      "Iteration [0/611] | Loss: 0.2140\n",
-      "Iteration [50/611] | Loss: 0.2562\n",
-      "Iteration [100/611] | Loss: 0.2633\n",
-      "Iteration [150/611] | Loss: 0.3051\n",
-      "Iteration [200/611] | Loss: 0.2256\n",
-      "Iteration [250/611] | Loss: 0.3717\n",
-      "Iteration [300/611] | Loss: 0.2565\n",
-      "Iteration [350/611] | Loss: 0.2308\n",
-      "Iteration [400/611] | Loss: 0.3323\n",
-      "Iteration [450/611] | Loss: 0.3586\n",
-      "Iteration [500/611] | Loss: 0.3024\n",
+      "Iteration [0/611] | Loss: 0.6595\n",
+      "Iteration [50/611] | Loss: 0.2944\n",
+      "Iteration [100/611] | Loss: 0.2935\n",
+      "Iteration [150/611] | Loss: 0.2795\n",
+      "Iteration [200/611] | Loss: 0.3654\n",
+      "Iteration [250/611] | Loss: 0.5282\n",
+      "Iteration [300/611] | Loss: 0.3020\n",
+      "Iteration [350/611] | Loss: 0.4414\n",
+      "Iteration [400/611] | Loss: 0.3226\n",
+      "Iteration [450/611] | Loss: 0.2829\n",
+      "Iteration [500/611] | Loss: 0.2671\n",
+      "Iteration [550/611] | Loss: 0.3936\n",
+      "Iteration [600/611] | Loss: 0.3198\n",
+      "Epoch [1/10] | Loss: 0.3298 | Time: 7.30s\n",
+      "Iteration [0/611] | Loss: 0.2705\n",
+      "Iteration [50/611] | Loss: 0.2513\n",
+      "Iteration [100/611] | Loss: 0.3395\n",
+      "Iteration [150/611] | Loss: 0.3209\n",
+      "Iteration [200/611] | Loss: 0.1987\n",
+      "Iteration [250/611] | Loss: 0.2425\n",
+      "Iteration [300/611] | Loss: 0.2550\n",
+      "Iteration [350/611] | Loss: 0.3230\n",
+      "Iteration [400/611] | Loss: 0.3459\n",
+      "Iteration [450/611] | Loss: 0.2867\n",
+      "Iteration [500/611] | Loss: 0.3798\n",
+      "Iteration [550/611] | Loss: 0.2542\n",
+      "Iteration [600/611] | Loss: 0.2352\n",
+      "Epoch [2/10] | Loss: 0.2969 | Time: 6.36s\n",
+      "Iteration [0/611] | Loss: 0.2907\n",
+      "Iteration [50/611] | Loss: 0.3808\n",
+      "Iteration [100/611] | Loss: 0.3522\n",
+      "Iteration [150/611] | Loss: 0.2864\n",
+      "Iteration [200/611] | Loss: 0.3624\n",
+      "Iteration [250/611] | Loss: 0.2482\n",
+      "Iteration [300/611] | Loss: 0.2730\n",
+      "Iteration [350/611] | Loss: 0.1783\n",
+      "Iteration [400/611] | Loss: 0.2776\n",
+      "Iteration [450/611] | Loss: 0.3059\n",
+      "Iteration [500/611] | Loss: 0.3194\n",
+      "Iteration [550/611] | Loss: 0.3831\n",
+      "Iteration [600/611] | Loss: 0.3059\n",
+      "Epoch [3/10] | Loss: 0.2858 | Time: 6.35s\n",
+      "Iteration [0/611] | Loss: 0.2229\n",
+      "Iteration [50/611] | Loss: 0.1972\n",
+      "Iteration [100/611] | Loss: 0.3200\n",
+      "Iteration [150/611] | Loss: 0.3514\n",
+      "Iteration [200/611] | Loss: 0.2696\n",
+      "Iteration [250/611] | Loss: 0.3025\n",
+      "Iteration [300/611] | Loss: 0.2668\n",
+      "Iteration [350/611] | Loss: 0.3003\n",
+      "Iteration [400/611] | Loss: 0.3154\n",
+      "Iteration [450/611] | Loss: 0.2992\n",
+      "Iteration [500/611] | Loss: 0.3336\n",
+      "Iteration [550/611] | Loss: 0.1729\n",
+      "Iteration [600/611] | Loss: 0.2517\n",
+      "Epoch [4/10] | Loss: 0.2790 | Time: 6.35s\n",
+      "Iteration [0/611] | Loss: 0.4502\n",
+      "Iteration [50/611] | Loss: 0.2404\n",
+      "Iteration [100/611] | Loss: 0.3124\n",
+      "Iteration [150/611] | Loss: 0.2881\n",
+      "Iteration [200/611] | Loss: 0.2923\n",
+      "Iteration [250/611] | Loss: 0.1531\n",
+      "Iteration [300/611] | Loss: 0.2548\n",
+      "Iteration [350/611] | Loss: 0.3224\n",
+      "Iteration [400/611] | Loss: 0.4335\n",
+      "Iteration [450/611] | Loss: 0.1940\n",
+      "Iteration [500/611] | Loss: 0.2891\n",
+      "Iteration [550/611] | Loss: 0.3016\n",
+      "Iteration [600/611] | Loss: 0.3758\n",
+      "Epoch [5/10] | Loss: 0.2732 | Time: 6.36s\n",
+      "Iteration [0/611] | Loss: 0.2696\n",
+      "Iteration [50/611] | Loss: 0.2032\n",
+      "Iteration [100/611] | Loss: 0.1522\n",
+      "Iteration [150/611] | Loss: 0.2367\n",
+      "Iteration [200/611] | Loss: 0.2100\n",
+      "Iteration [250/611] | Loss: 0.1818\n",
+      "Iteration [300/611] | Loss: 0.3283\n",
+      "Iteration [350/611] | Loss: 0.1641\n",
+      "Iteration [400/611] | Loss: 0.2442\n",
+      "Iteration [450/611] | Loss: 0.3602\n",
+      "Iteration [500/611] | Loss: 0.2498\n",
       "Iteration [550/611] | Loss: 0.2570\n",
-      "Iteration [600/611] | Loss: 0.2596\n",
-      "Epoch [4/10] | Loss: 0.2808 | Accuracy: 0.8673 | Time: 6.88s\n",
-      "Iteration [0/611] | Loss: 0.3148\n",
-      "Iteration [50/611] | Loss: 0.2199\n",
-      "Iteration [100/611] | Loss: 0.1563\n",
-      "Iteration [150/611] | Loss: 0.2035\n",
-      "Iteration [200/611] | Loss: 0.2603\n",
-      "Iteration [250/611] | Loss: 0.3693\n",
-      "Iteration [300/611] | Loss: 0.1361\n",
-      "Iteration [350/611] | Loss: 0.3313\n",
-      "Iteration [400/611] | Loss: 0.2304\n",
-      "Iteration [450/611] | Loss: 0.2037\n",
-      "Iteration [500/611] | Loss: 0.2845\n",
-      "Iteration [550/611] | Loss: 0.3588\n",
-      "Iteration [600/611] | Loss: 0.2900\n",
-      "Epoch [5/10] | Loss: 0.2784 | Accuracy: 0.8706 | Time: 6.89s\n",
-      "Iteration [0/611] | Loss: 0.3036\n",
-      "Iteration [50/611] | Loss: 0.2093\n",
-      "Iteration [100/611] | Loss: 0.3009\n",
-      "Iteration [150/611] | Loss: 0.2284\n",
-      "Iteration [200/611] | Loss: 0.2593\n",
-      "Iteration [250/611] | Loss: 0.2752\n",
-      "Iteration [300/611] | Loss: 0.2285\n",
-      "Iteration [350/611] | Loss: 0.1961\n",
-      "Iteration [400/611] | Loss: 0.2250\n",
-      "Iteration [450/611] | Loss: 0.3483\n",
-      "Iteration [500/611] | Loss: 0.1556\n",
-      "Iteration [550/611] | Loss: 0.3569\n",
-      "Iteration [600/611] | Loss: 0.2360\n",
-      "Epoch [6/10] | Loss: 0.2763 | Accuracy: 0.8710 | Time: 7.12s\n",
-      "Iteration [0/611] | Loss: 0.2812\n",
-      "Iteration [50/611] | Loss: 0.2700\n",
-      "Iteration [100/611] | Loss: 0.2458\n",
-      "Iteration [150/611] | Loss: 0.2293\n",
-      "Iteration [200/611] | Loss: 0.2324\n",
+      "Iteration [600/611] | Loss: 0.2613\n",
+      "Epoch [6/10] | Loss: 0.2707 | Time: 6.37s\n",
+      "Iteration [0/611] | Loss: 0.2432\n",
+      "Iteration [50/611] | Loss: 0.1772\n",
+      "Iteration [100/611] | Loss: 0.3606\n",
+      "Iteration [150/611] | Loss: 0.2254\n",
+      "Iteration [200/611] | Loss: 0.2905\n",
+      "Iteration [250/611] | Loss: 0.2720\n",
+      "Iteration [300/611] | Loss: 0.2969\n",
+      "Iteration [350/611] | Loss: 0.3284\n",
+      "Iteration [400/611] | Loss: 0.1962\n",
+      "Iteration [450/611] | Loss: 0.3460\n",
+      "Iteration [500/611] | Loss: 0.3585\n",
+      "Iteration [550/611] | Loss: 0.2083\n",
+      "Iteration [600/611] | Loss: 0.2783\n",
+      "Epoch [7/10] | Loss: 0.2660 | Time: 6.35s\n",
+      "Iteration [0/611] | Loss: 0.3467\n",
+      "Iteration [50/611] | Loss: 0.2254\n",
+      "Iteration [100/611] | Loss: 0.3131\n",
+      "Iteration [150/611] | Loss: 0.2694\n",
+      "Iteration [200/611] | Loss: 0.2528\n",
+      "Iteration [250/611] | Loss: 0.2775\n",
+      "Iteration [300/611] | Loss: 0.3063\n",
+      "Iteration [350/611] | Loss: 0.2732\n",
+      "Iteration [400/611] | Loss: 0.2032\n",
+      "Iteration [450/611] | Loss: 0.2926\n",
+      "Iteration [500/611] | Loss: 0.2153\n",
+      "Iteration [550/611] | Loss: 0.3188\n",
+      "Iteration [600/611] | Loss: 0.2600\n",
+      "Epoch [8/10] | Loss: 0.2618 | Time: 6.43s\n",
+      "Iteration [0/611] | Loss: 0.2575\n",
+      "Iteration [50/611] | Loss: 0.1809\n",
+      "Iteration [100/611] | Loss: 0.1766\n",
+      "Iteration [150/611] | Loss: 0.3016\n",
+      "Iteration [200/611] | Loss: 0.2718\n",
       "Iteration [250/611] | Loss: 0.3308\n",
-      "Iteration [300/611] | Loss: 0.2711\n",
-      "Iteration [350/611] | Loss: 0.3066\n",
-      "Iteration [400/611] | Loss: 0.2192\n",
-      "Iteration [450/611] | Loss: 0.1691\n",
-      "Iteration [500/611] | Loss: 0.4017\n",
-      "Iteration [550/611] | Loss: 0.2557\n",
-      "Iteration [600/611] | Loss: 0.1768\n",
-      "Epoch [7/10] | Loss: 0.2754 | Accuracy: 0.8709 | Time: 6.97s\n",
-      "Iteration [0/611] | Loss: 0.3159\n",
-      "Iteration [50/611] | Loss: 0.3340\n",
-      "Iteration [100/611] | Loss: 0.2355\n",
-      "Iteration [150/611] | Loss: 0.3082\n",
-      "Iteration [200/611] | Loss: 0.1943\n",
-      "Iteration [250/611] | Loss: 0.2387\n",
-      "Iteration [300/611] | Loss: 0.1613\n",
-      "Iteration [350/611] | Loss: 0.3933\n",
-      "Iteration [400/611] | Loss: 0.1935\n",
-      "Iteration [450/611] | Loss: 0.3883\n",
-      "Iteration [500/611] | Loss: 0.1440\n",
-      "Iteration [550/611] | Loss: 0.1788\n",
-      "Iteration [600/611] | Loss: 0.1925\n",
-      "Epoch [8/10] | Loss: 0.2738 | Accuracy: 0.8728 | Time: 7.13s\n",
-      "Iteration [0/611] | Loss: 0.1554\n",
-      "Iteration [50/611] | Loss: 0.3472\n",
-      "Iteration [100/611] | Loss: 0.2441\n",
-      "Iteration [150/611] | Loss: 0.2250\n",
-      "Iteration [200/611] | Loss: 0.2056\n",
-      "Iteration [250/611] | Loss: 0.3324\n",
-      "Iteration [300/611] | Loss: 0.2692\n",
-      "Iteration [350/611] | Loss: 0.2253\n",
-      "Iteration [400/611] | Loss: 0.1961\n",
-      "Iteration [450/611] | Loss: 0.3322\n",
-      "Iteration [500/611] | Loss: 0.2656\n",
-      "Iteration [550/611] | Loss: 0.4417\n",
-      "Iteration [600/611] | Loss: 0.3127\n",
-      "Epoch [9/10] | Loss: 0.2719 | Accuracy: 0.8715 | Time: 7.31s\n",
-      "Iteration [0/611] | Loss: 0.3031\n",
-      "Iteration [50/611] | Loss: 0.1448\n",
-      "Iteration [100/611] | Loss: 0.2358\n",
-      "Iteration [150/611] | Loss: 0.2261\n",
-      "Iteration [200/611] | Loss: 0.2152\n",
-      "Iteration [250/611] | Loss: 0.2868\n",
-      "Iteration [300/611] | Loss: 0.2399\n",
-      "Iteration [350/611] | Loss: 0.3994\n",
-      "Iteration [400/611] | Loss: 0.2540\n",
-      "Iteration [450/611] | Loss: 0.3592\n",
-      "Iteration [500/611] | Loss: 0.2132\n",
-      "Iteration [550/611] | Loss: 0.3784\n",
-      "Iteration [600/611] | Loss: 0.2419\n",
-      "Epoch [10/10] | Loss: 0.2716 | Accuracy: 0.8725 | Time: 7.29s\n",
-      "Evaluation Metric: 87.2351 | Accuracy: 0.8724\n"
+      "Iteration [300/611] | Loss: 0.1781\n",
+      "Iteration [350/611] | Loss: 0.1663\n",
+      "Iteration [400/611] | Loss: 0.1985\n",
+      "Iteration [450/611] | Loss: 0.1961\n",
+      "Iteration [500/611] | Loss: 0.2603\n",
+      "Iteration [550/611] | Loss: 0.3298\n",
+      "Iteration [600/611] | Loss: 0.2299\n",
+      "Epoch [9/10] | Loss: 0.2558 | Time: 6.45s\n",
+      "Iteration [0/611] | Loss: 0.2819\n",
+      "Iteration [50/611] | Loss: 0.2013\n",
+      "Iteration [100/611] | Loss: 0.2155\n",
+      "Iteration [150/611] | Loss: 0.3065\n",
+      "Iteration [200/611] | Loss: 0.2705\n",
+      "Iteration [250/611] | Loss: 0.3097\n",
+      "Iteration [300/611] | Loss: 0.2188\n",
+      "Iteration [350/611] | Loss: 0.4103\n",
+      "Iteration [400/611] | Loss: 0.1888\n",
+      "Iteration [450/611] | Loss: 0.1617\n",
+      "Iteration [500/611] | Loss: 0.2097\n",
+      "Iteration [550/611] | Loss: 0.2809\n",
+      "Iteration [600/611] | Loss: 0.3259\n",
+      "Epoch [10/10] | Loss: 0.2511 | Time: 6.34s\n",
+      "Evaluation Metric: 87.1225\n"
      ]
     }
    ],
    "source": [
     "params = {\n",
-    "    'model_name': 'ModernNCA',\n",
+    "    'model_name': 'TabTransformer',\n",
     "    'num_encoder': 'FourierFeatures',\n",
+    "    # None,\n",
+    "    # 'FourierFeatures',\n",
+    "    # 'BinningFeatures',\n",
+    "    'num_encoder_trainable': True\n",
+    "    # False,\n",
+    "    # True,\n",
     "}\n",
     "\n",
     "# Load dataset\n",
@@ -247,10 +254,29 @@
     "    # Align the test and train categorical features to prevent data leakage\n",
     "    X_train_cat, X_test_cat = X_train_cat.align(X_test_cat, join='left', axis=1, fill_value=0)\n",
     "\n",
-    "# Scale numerical columns\n",
+    "# Process numerical columns\n",
     "numerical_transformer = StandardScaler()\n",
     "X_train_num = numerical_transformer.fit_transform(X_train[numerical_columns])\n",
     "X_test_num = numerical_transformer.transform(X_test[numerical_columns])\n",
+    "\n",
+    "if (not params['num_encoder_trainable']) and (params['num_encoder'] is not None):\n",
+    "    num_encoder = ENCODERS[params['num_encoder']](\n",
+    "        n_features=X_train_num.shape[1],\n",
+    "        **config[params['num_encoder']],\n",
+    "    )\n",
+    "    with torch.no_grad():\n",
+    "        X_train_num = num_encoder(torch.from_numpy(X_train_num).float(), trainable=False)\n",
+    "        X_test_num = num_encoder(torch.from_numpy(X_test_num).float(), trainable=False)\n",
+    "        X_train_num = X_train_num.numpy()\n",
+    "        X_test_num = X_test_num.numpy()\n",
+    "    num_encoder = None\n",
+    "elif params['num_encoder'] is not None:\n",
+    "    num_encoder = ENCODERS[params['num_encoder']](\n",
+    "        n_features=X_train_num.shape[1],\n",
+    "        **config[params['num_encoder']],\n",
+    "    )\n",
+    "else:\n",
+    "    num_encoder = None\n",
     "\n",
     "# Convert to tensors\n",
     "y_train = torch.tensor(y_train, dtype=torch.long)\n",
@@ -268,15 +294,6 @@
     "d_in_num = X_train_num.shape[1]\n",
     "d_in_cat = X_train_cat.shape[1] if d_in_cat is None else d_in_cat\n",
     "d_out = len(np.unique(y_train))\n",
-    "\n",
-    "# Define numerical feature encoder\n",
-    "if params['num_encoder']:\n",
-    "    num_encoder = ENCODERS[params['num_encoder']](\n",
-    "        n_features=d_in_num,\n",
-    "        **config[params['num_encoder']],\n",
-    "    )\n",
-    "else:\n",
-    "    num_encoder = None\n",
     "\n",
     "# Define the model\n",
     "model = MODELS[params['model_name']](\n",
@@ -319,6 +336,26 @@
     "    criterion=accuracy_criterion,\n",
     "    batch_size=32,\n",
     ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([39073, 6])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train_num.shape"
    ]
   },
   {
