Add ed support for various datasets

--- a/test.ipynb
+++ b/test.ipynb
@@ -13,27 +13,54 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import yaml\n",
     "import os\n",
-    "os.chdir('/home/mrsergazinov/TabLLM/feature_encoding_exp/')\n",
-    "from train_eval_adult import run"
+    "from collections import defaultdict\n",
+    "os.chdir('/home/mrsergazinov/TabLLM/')\n",
+    "from train_eval_adult import load_data, preprocess_data, train_and_evaluate_model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "70.73431922488527\n"
+     ]
+    }
+   ],
    "source": [
     "params = {\n",
-    "        'model_name': 'ModernNCA',\n",
-    "        'num_encoder': 'ComboFeatures',\n",
+    "        'dataset_name': 'higgs',\n",
+    "        'model_name': 'MLP',\n",
+    "        'num_encoder': None,\n",
     "        'num_encoder_trainable': False,\n",
     "        'scaler': 'SquareScalingFeatures',\n",
     "        'n_run': 1,\n",
-    "        'config_file': 'configs/adult.yaml',\n",
-    "        'output_file': 'results_misc.txt',\n",
-    "    }\n",
-    "run(params)"
+    "        'config_file': 'configs/higgs.yaml',\n",
+    "        'random_state': 42,\n",
+    "        'test_size': 0.2,\n",
+    "}\n",
+    "\n",
+    "X, y, task_type = load_data(params)\n",
+    "y_train, y_test, X_train_num, X_train_cat, X_test_num, X_test_cat = preprocess_data(X, y, task_type, params)\n",
+    "metric = train_and_evaluate_model(\n",
+    "        X_train_num=X_train_num,\n",
+    "        X_test_num=X_test_num,\n",
+    "        X_train_cat=X_train_cat,\n",
+    "        X_test_cat=X_test_cat,\n",
+    "        y_train=y_train,\n",
+    "        y_test=y_test,\n",
+    "        task_type=task_type,\n",
+    "        params=params,\n",
+    "        verbose_training=False,\n",
+    "        verbose_evaluation=False,\n",
+    ")\n",
+    "print(metric)"
    ]
   },
   {
